fixes for when there is no data, more tests